WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
315473
AX: WebKit should break up stitch groups when encountering a clickable container
https://bugs.webkit.org/show_bug.cgi?id=315473
Summary
AX: WebKit should break up stitch groups when encountering a clickable container
Tyler Wilcock
Reported
2026-05-24 14:08:35 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-05-24 14:08:40 PDT
<
rdar://problem/177836509
>
Tyler Wilcock
Comment 2
2026-05-24 14:17:36 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/65582
EWS
Comment 3
2026-05-26 17:44:49 PDT
Committed
313932@main
(77623d99ad9e): <
https://commits.webkit.org/313932@main
> Reviewed commits have been landed. Closing PR #65582 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug